--- a/Final project/excursion_review.html
+++ b/Final project/excursion_review.html
@@ -192,9 +192,9 @@
     <footer>
         <img class="logoColor" src="Images/svg/logo_color.svg">
         <div class="footerMenu">
-            <p>Главная</p>
-            <p>Экскурсии</p>
-            <p>Личный кабинет</p>
+            <p><a href="main_page.html">Главная</a></p>
+            <p><a href="excursion.html">Экскурсии</a></p>
+            <p><a href="">Личный кабинет</a></p>
         </div>
         <div class="footerContacts">
             <div class="whatsapp">
@@ -210,10 +210,12 @@
                 <p>Телеграм-бот PeroTravel</p>
             </div>
         </div>
-        <div>
+        <div class="footer-mail-sm">
             <div class="footerMail">
                 <img src="Images/svg/mail_logo.svg">
-                <p>office@perotravel.ru</p>
+                <a href="mailto: office@perotravel.ru">
+                    <p>office@perotravel.ru</p>
+                </a>
             </div>
             <div class="footerSM">
                 <img src="Images/svg/vk _color_logo.svg">
