--- a/Final project/main_page.html
+++ b/Final project/main_page.html
@@ -56,13 +56,9 @@
                 </svg>
             </button>
         </div>
-        <a href="excursion.html">
             <form action="excursion.html" class="button-header">
                 <button id="button-text">К экскурсиям<img id="arrow1" src="Images/svg/arrow1.svg"></button>
             </form>
-        </a>
-    </header>
-
     <div class="video">
         <video poster="Images/images/main_video_img.png">
             <source src="Video/boat_-_1412 (360p).mp4">
@@ -72,6 +68,9 @@
         <button id="closeVideo" onclick="closeVideo(this.parentElement)"><img id="crossBtn"
                 src="Images/svg/cross-button.svg"></button>
     </div>
+    </header>
+
+    
 
     <div class="title">
         <h3>Популярные экскурсии</h3>
@@ -208,7 +207,7 @@
                 <input type="text" name="email" value="">
             </form>
             <form action=" " class="button-excursion">
-                <button id="button-text">Оставить заявку<img id="arrow1" src="Images/svg/arrow1.svg"></button>
+                <button id="button-text" type="submit">Оставить заявку<img id="arrow1" src="Images/svg/arrow1.svg"></button>
             </form>
         </div>
 
