--- a/Final project/excursion_review.html
+++ b/Final project/excursion_review.html
@@ -30,8 +30,8 @@
             <form class="button-like">
                 <button id="button-text">Подробнее<img id="arrow1" src="Images/svg/arrow1.svg"></button>
             </form>
-            <div>
-                <label><input type="checkbox" value="1" id="checkbox" onclick="toggleColor()">
+            <div class="like-heart">
+                <label><input type="checkbox" value="1" id="checkbox" onclick="toggleColor(this.parentElement)">
                     <span>
                         <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <circle id="circle" cx="20" cy="20" r="20" fill="#EDEDED" />
@@ -66,21 +66,40 @@
 
     <div id="lake_photo">
         <img src="Images/images/page3_photo_lake.png">
-        <h2>Календарь путешествий</h2>
     </div>
 
-
+<div id="article-slider">
     <article class="route_description">
         <h2>Описание маршрута</h2>
+        <ul>
         <li>Город Гагра, Колоннада, ресторан "Гагрипш", Парк принца Ольденбурского;</li>
         <li>Смотровая площадка "Прощай Родина", "Чабгарский" карниз, Подвесной мост через реку "Бзыбь";</li>
         <li>Дегустация сыра, меда, вина, чачи (входит в стоимость экскурсии), Голубое Озеро, Юпшарский каньон ("Каменный
             мешок"), Озеро "Рица", Водопады "Девичьи и мужские слезы".</li>
+        </ul>
         <p>Далее на выбор:</p>
+        <ul>
         <li>Монастырь "Новый Афон", Новоафонская Пещера, "Рукотворный" водопад, храм "Симона Кананита", Лебединое озеро.
         </li>
         <li>Термальный источник в с. Приморское.</li>
+    </ul>
     </article>
+    <div id="slider">
+        <div class="slideshow-container" id="x">
+            <div class="mySlides fade">
+                <img src="Images/images/gallery2_photo2.png">
+            </div>
+            <div class="mySlides fade">
+                <img src="Images/images/gallery2_photo4.png">
+            </div>
+            <div class="mySlides fade">
+                <img src="Images/images/gallery_photo3.png">
+            </div>
+        </div>
+        <a class="prev" onclick="previousSlide()">&#10094;</a>
+        <a class="next" onclick="nextSlide()">&#10095;</a>
+    </div>
+    </div>
 
     <h2>Дополнительные расходы (по желанию)</h2>
 
@@ -176,24 +195,20 @@
                 <input id="date" type="date">
                 <input id="people" type="text">
                 <input id="children-number" type="text">
-                <div class="button-to-book">
-                    <form class="button-like">
+                <div class="button-with-like2">
+                    <form action="excursion.html" class="button-like">
                         <button id="button-text">Подробнее<img id="arrow1" src="Images/svg/arrow1.svg"></button>
                     </form>
-                    <div>
-                        <label><input type="checkbox" value="1" id="checkbox" onclick="toggleColor()">
+                    <div class="like-heart">
+                        <label><input type="checkbox" value="1" id="checkbox" onclick="toggleColor(this.parentElement)">
                             <span>
-                                <svg width="40" height="40" viewBox="0 0 40 40" fill="none"
-                                    xmlns="http://www.w3.org/2000/svg">
+                                <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <circle id="circle" cx="20" cy="20" r="20" fill="#EDEDED" />
                                     <path id="heart"
                                         d="M28.8401 12.61C28.3294 12.099 27.7229 11.6936 27.0555 11.4171C26.388 11.1405 25.6726 10.9982 24.9501 10.9982C24.2276 10.9982 23.5122 11.1405 22.8448 11.4171C22.1773 11.6936 21.5709 12.099 21.0601 12.61L20.0001 13.67L18.9401 12.61C17.9084 11.5783 16.5092 10.9987 15.0501 10.9987C13.5911 10.9987 12.1918 11.5783 11.1601 12.61C10.1284 13.6417 9.54883 15.041 9.54883 16.5C9.54883 17.959 10.1284 19.3583 11.1601 20.39L12.2201 21.45L20.0001 29.23L27.7801 21.45L28.8401 20.39C29.3511 19.8792 29.7565 19.2728 30.033 18.6053C30.3096 17.9379 30.4519 17.2225 30.4519 16.5C30.4519 15.7775 30.3096 15.0621 30.033 14.3946C29.7565 13.7272 29.3511 13.1208 28.8401 12.61V12.61Z"
-                                        stroke="#D4D4D4" stroke-width="2" stroke-linecap="round"
-                                        stroke-linejoin="round" />
+                                        stroke="#D4D4D4" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
                                 </svg>
                     </div>
-                    </span>
-                    </label>
                 </div>
             </form>
         </div>
@@ -234,6 +249,8 @@
             </div>
         </div>
     </footer>
+
+    <script src="script.js"></script>
 
 </body>
 
