--- a/Final project/main_page.html
+++ b/Final project/main_page.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pero Travel</title>
     <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
+
 
 </head>
 
@@ -56,7 +58,7 @@
                 </svg>
             </button>
         </div>
-        <form class="button-header">
+        <form action="excursion.html" class="button-header">
             <button id="button-text">К экскурсиям<img id="arrow1" src="Images/svg/arrow1.svg"></button>
         </form>
         <div class="video">
@@ -70,13 +72,64 @@
         </div>
     </header>
 
-
-
     <div class="title">
         <h3>Популярные экскурсии</h3>
         <div id="see-all"><a href="">Смотреть все</a></div>
     </div>
 
+    <div id="slides">
+        <div id="slide1">
+            <div class="slides-text">
+                <p>Автобусный тур</p>
+                <h3>Обзорная по Сочи (из Адлера)</h3>
+                <img src="Images/svg/one half hour.svg">
+                <img src="Images/svg/1890 roubles.svg">
+                <p>Приглашаем вас на экскурсию
+                    "Обзорная по Большому Сочи":
+                    Экскурсия начнется с подъёма на гору Большой Ахун - это высшая точка (665 метров) на побережьи
+                    Сочи. На
+                    вершине горы Большой Ахун есть смотровая башня, построенная в 1935-36 годах по проекту
+                    архитектора С. И.
+                    Воробьева...</p>
+            </div>
+            <form action=" " class="button-precise">
+                <button id="button-text">Подробнее<img id="arrow1" src="Images/svg/arrow1.svg"></button>
+            </form>
+        </div>
+
+
+        <div id="slide2">
+            <div class="slides-text">
+                <p>Конный тур</p>
+                <h3>Конные прогулки</h3>
+                <img src="Images/svg/2 hours.svg">
+                <img src="Images/svg/3000 roubles.svg">
+                <p>Конные прогулки проходят в Лазурной долине. С долины открывается красивый вид на море, горы и лес. На
+                    всем пути следования экскурсии вас будут сопровождать опытные инструктора. Катание на лошадях или
+                    иппотерапия очень полезна для детей и взрослых...</p>
+            </div>
+            <form action=" " class="button-precise">
+                <button id="button-text">Подробнее<img id="arrow1" src="Images/svg/arrow1.svg"></button>
+            </form>
+        </div>
+
+
+        <div id="slide3">
+            <div class="slides-text">
+                <p>Квадротур</p>
+                <h3>Пасть дракона</h3>
+                <img src="Images/svg/6 hours.svg">
+                <img src="Images/svg/618 roubles.svg">
+                <p>Маршрут на Квадроциклах проходит по горной реке Мзымта вдоль белых скал и самшитовый лес к водопаду
+                    Глубокий Яр или "Пасть Дракона" (экскурсионное название).
+                    Высота водопада 41,5 метр - это один из самых высоких водопадов Большого Сочи...</p>
+            </div>
+            <form action=" " class="button-precise">
+                <button id="button-text">Подробнее<img id="arrow1" src="Images/svg/arrow1.svg"></button>
+            </form>
+        </div>
+
+    </div>
 
     <div class="about-us">
         <img src="Images/images/about_us.png">
@@ -149,7 +202,7 @@
         очередей, просто и
         быстро!
     </div>
-    <form class="button-excursion">
+    <form action="excursion.html" class="button-excursion">
         <button id="button-text">К экскурсиям<img id="arrow1" src="Images/svg/arrow1.svg"></button>
     </form>
 
@@ -187,9 +240,37 @@
         <h3>Отзывы</h3>
         <div id="see-all"><a href=" ">Смотреть все</a></div>
     </div>
-
-
-
+    <div class="reviews">
+        <div class="firstReview">
+            <img src="Images/images/review1.png" class="block" alt="">
+            <div id="review-text">
+                <p><b>Иван Иванов, 25 лет</b></p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et
+                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip
+                    ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                    dolore eu
+                    fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                    deserunt mollit anim id est laborum.</p>
+            </div>
+        </div>
+        <div class="secondReview">
+            <img src="Images/images/review2.png" class="block" alt="">
+            <div id="review-text">
+                <p><b>Иван Иванов, 25 лет</b></p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et
+                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip
+                    ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                    dolore eu
+                    fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                    deserunt mollit anim id est laborum.</p>
+            </div>
+        </div>
+    </div>
+   
     <div class="questions">
         <div class="form">
             <h3>Остались вопросы?</h3>
@@ -254,6 +335,7 @@
     </footer>
     
     <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 
 </body>
 
