--- a/Final project/tests.html/calendar.html
+++ b/Final project/tests.html/calendar.html
@@ -22,8 +22,18 @@
     <script>
         
         let dp = new AirDatepicker("#dp", {});
+        new AirDatepicker('#div');
+
+// Or init with {inline: true} on <input> or <div> elements
+
+new AirDatepicker('#input', {
+    inline: true
+})
 
     </script>
+
+<script type="javascript" src="dist/js/pignose.calendar.full.min.js"></script>
+
 </body>
 
 </html>
