--- a/Final project/tests.html/slides_tests.html
+++ b/Final project/tests.html/slides_tests.html
@@ -14,7 +14,6 @@
             height: 430px;
             width: 95%;
             box-sizing: border-box;
-            overflow: hidden;
             border-radius: 10px;
         }
 
@@ -22,25 +21,23 @@
         #slide2,
         #slide3 {
             padding-left: 15px;
-            padding-top: 12%;
+            padding-top: 8%;
         }
 
         #slide1 {
             height: 430px;
             width: 360px;
-            background: linear-gradient(180deg, rgba(0, 0, 0, 0.121739) 0%, #000000 100%);
+            background: url(../Images/images/bridge.png);
             background-repeat: no-repeat;
-            background-image: url(Images/images/bridge.png);
             border-radius: 10px;
             display: flex;
             flex-direction: column;
         }
 
         #slide2 {
-            background-image: url(Images/images/horses.png);
             height: 430px;
             width: 360px;
-            background: linear-gradient(180deg, rgba(0, 0, 0, 0.121739) 0%, #000000 100%) url(Images/images/horses.png);
+            background: url(../Images/images/horses.png);
             background-repeat: no-repeat;
             border-radius: 10px;
             display: flex;
@@ -48,10 +45,9 @@
         }
 
         #slide3 {
-            background-image: url(Images/images/waterfall.png);
             height: 430px;
             width: 360px;
-            background: linear-gradient(180deg, rgba(0, 0, 0, 0.121739) 0%, #000000 100%) url(Images/images/waterfall.png);
+            background: url(../Images/images/waterfall.png);
             background-repeat: no-repeat;
             border-radius: 10px;
             display: flex;
@@ -76,8 +72,6 @@
             line-height: 17px;
             color: #FFC700;
         }
-
-
 
         .button-precise {
             width: 160px;
@@ -137,8 +131,8 @@
             <div class="slides-text">
                 <p>Автобусный тур</p>
                 <h3>Обзорная по Сочи (из Адлера)</h3>
-                <img src="Images/svg/one half hour.svg">
-                <img src="Images/svg/1890 roubles.svg">
+                <img src="../Images/svg/one half hour.svg">
+                <img src="../Images/svg/1890 roubles.svg">
                 <p>Приглашаем вас на экскурсию
                     "Обзорная по Большому Сочи":
                     Экскурсия начнется с подъёма на гору Большой Ахун - это высшая точка (665 метров) на побережьи
@@ -148,7 +142,7 @@
                     Воробьева...</p>
             </div>
             <form action=" " class="button-precise">
-                <button id="button-text">Подробнее<img id="arrow1" src="Images/svg/arrow1.svg"></button>
+                <button id="button-text">Подробнее<img id="arrow1" src="../Images/svg/arrow1.svg"></button>
             </form>
         </div>
 
@@ -157,14 +151,14 @@
             <div class="slides-text">
                 <p>Конный тур</p>
                 <h3>Конные прогулки</h3>
-                <img src="Images/svg/2 hours.svg">
-                <img src="Images/svg/3000 roubles.svg">
+                <img src="../Images/svg/2 hours.svg">
+                <img src="../Images/svg/3000 roubles.svg">
                 <p>Конные прогулки проходят в Лазурной долине. С долины открывается красивый вид на море, горы и лес. На
                     всем пути следования экскурсии вас будут сопровождать опытные инструктора. Катание на лошадях или
                     иппотерапия очень полезна для детей и взрослых...</p>
             </div>
             <form action=" " class="button-precise">
-                <button id="button-text">Подробнее<img id="arrow1" src="Images/svg/arrow1.svg"></button>
+                <button id="button-text">Подробнее<img id="arrow1" src="../Images/svg/arrow1.svg"></button>
             </form>
         </div>
 
@@ -173,14 +167,14 @@
             <div class="slides-text">
                 <p>Квадротур</p>
                 <h3>Пасть дракона</h3>
-                <img src="Images/svg/6 hours.svg">
-                <img src="Images/svg/618 roubles.svg">
+                <img src="../Images/svg/6 hours.svg">
+                <img src="../Images/svg/618 roubles.svg">
                 <p>Маршрут на Квадроциклах проходит по горной реке Мзымта вдоль белых скал и самшитовый лес к водопаду
                     Глубокий Яр или "Пасть Дракона" (экскурсионное название).
                     Высота водопада 41,5 метр - это один из самых высоких водопадов Большого Сочи...</p>
             </div>
             <form action=" " class="button-precise">
-                <button id="button-text">Подробнее<img id="arrow1" src="Images/svg/arrow1.svg"></button>
+                <button id="button-text">Подробнее<img id="arrow1" src="../Images/svg/arrow1.svg"></button>
             </form>
         </div>
 
