--- a/Home_work_5/index.html
+++ b/Home_work_5/index.html
@@ -19,6 +19,14 @@
 </head>
 
 <body>
+  <header>
+    <div id="title">Our shop</div>
+    <form>
+      <div id="your-cart">Your cart - 00.00$</div>
+      <input class="seach-input" placeholder="Search">
+      <a href="#" class="btn-search">Search</a>
+    </form>
+  </header>
   <div class="container">
     <h1 class="title">Our Products</h1>
 
@@ -37,7 +45,7 @@
           <div class="price"></div>
           <div class="rating"></div>
         </div>
-        <a href="#" class="btn btn-primary">Add to card</a>
+        <a href="#" class="btn btn-primary">Add to cart</a>
 
       </div>
     </div>
