new html creation

--- a/JS_Home_work_6/index.html
+++ b/JS_Home_work_6/index.html
@@ -24,7 +24,7 @@
     <form>
       <div id="your-cart">Your cart - 00.00$</div>
       <input class="seach-input" placeholder="Search">
-      <a href="#" class="btn-search">Search</a>
+      <a href="#" class="btn-search" onclick="forFilter()">Search</a>
     </form>
   </header>
   <div class="container">
