shopping cart function

--- a/JS_Home_work_6/index.html
+++ b/JS_Home_work_6/index.html
@@ -43,13 +43,13 @@
       <div class="item-image">image</div>
       <div class="item-title">title</div>
       <div class="quantity-price">
-        <div class="minus-quantity">-</div>
+        <div data-id="minus-quantity" data-id="minus">-</div>
         <div class="common-price-quantity">
           <div class="is-quantity">Quantity</div>
           <div class="multiply">x</div>
           <div class="is-price">Price</div>
         </div>
-        <div class="plus-quantity">+</div>
+        <div class="plus-quantity" data-id="plus">+</div>
       </div>
       <a class="delete-btn">Remove from order</a>
     </div>
