--- a/JS_Home_work_6/index.html
+++ b/JS_Home_work_6/index.html
@@ -45,18 +45,17 @@
       <div class="quantity-price">
         <div data-id="minus-quantity" data-id="minus">-</div>
         <div class="common-price-quantity">
-          <div class="is-quantity">Quantity</div>
+          <div class="is-quantity">0</div>
           <div class="multiply">x</div>
           <div class="is-price">Price</div>
         </div>
         <div class="plus-quantity" data-id="plus">+</div>
       </div>
       <a class="delete-btn">Remove from order</a>
-    </div>
-
     <div class="total-price">
       <span>Total:</span>
       <span>XXXXXX</span>
+    </div>
     </div>
     <a class="order-btn">Order</a>
   </div>
