--- a/JS_Home_work_6/index.html
+++ b/JS_Home_work_6/index.html
@@ -27,18 +27,20 @@
       <a href="#" class="btn-search">Search</a>
     </form>
   </header>
+
   <div class="container">
     <h1 class="title">Our Products</h1>
-
     <div class="wrapper row justify-content-center">
     </div>
   </div>
 
+  <!--Shopping cart - Main container-->
   <div class="main-container">
     <div class="order">
       <h1>Your Order</h1>
       <a class="close-btn">&times</a>
     </div>
+    <!--Shopping cart - Item info c-->
     <div class="item-information">
       <div class="item-image">image</div>
       <div class="item-title">title</div>
@@ -52,14 +54,16 @@
         <div class="plus-quantity" data-id="plus">+</div>
       </div>
       <a class="delete-btn">Remove from order</a>
-    <div class="total-price">
-      <span>Total:</span>
-      <span>XXXXXX</span>
-    </div>
-    </div>
+      </div>
+      <div class="total-price">
+        <span>Total:</span>
+        <span>XXXXXX</span>
+      </div>
+    
+    <!--Shopping cart - Btn to order-->
     <a class="order-btn">Order</a>
   </div>
-
+  <!-- card to clone on the html page-->
   <div id="template">
     <div class="card">
       <img src="" class="card-img-top" alt="...">
@@ -76,7 +80,7 @@
       </div>
     </div>
   </div>
-
+  <!--Spece to insert clones-->
   <div id="main-container">
   </div>
 
