--- a/JS_Home_work_6/shopping_cart.html
+++ b/JS_Home_work_6/shopping_cart.html
@@ -84,7 +84,7 @@
 </head>
 
 <body>
-    <div class="main-container">
+    <div class="shopping-cart-main-container">
         <div class="order">
             <h1>Your Order</h1>
             <a class="close-btn">&times</a>
