--- a/index.html
+++ b/index.html
@@ -133,6 +133,9 @@
         <button>=</button>
     </div>
 
+    <script src="calculator.js"></script>
+    <script src="index.js"></script>
+
 </body>
 
 </html>
