--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </div>
         <div class="screen">0</div>
         <button>AC</button>
-        <button>+/-</button>
+        <button onclick="plusMinus()">+/-</button>
         <button>&#37</button>
         <button onclick="inputOperation('/')">/</button>
         <button onclick="inputDigit(7)">7</button>
@@ -129,7 +129,7 @@
         <button onclick="inputDigit(3)">3</button>
         <button onclick="inputOperation('+')">+</button>
         <button onclick="inputDigit(0)" id="zero">0</button>
-        <button>.</button>
+        <button onclick="inputRadix()">.</button>
         <button>=</button>
     </div>
 
