--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Hello Weather</h1>
-        <input><input>
+        <input>Hello
     </header>
     <div class="main-table"></div>
     <div></div>
